# Dianode-Editor

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  imgui.ini  make.sh  profile.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/App/: Main.cpp  main_menu_bar.hpp  node_editor.hpp
src/core/Core/: Application.cpp  Application.hpp  Layer.hpp
src/dialogue-driver/: CMakeLists.txt
src/imnodes/: CMakeLists.txt
